# pyportela

./: .gitignore  =4.2.0  README.md  pyproject.toml  requirements.txt
notebooks/: AddData.ipynb  CreateDashboard.ipynb  CreateOrganization.ipynb  FunctionTests.ipynb  SupabaseClient.ipynb
notebooks/br_com/rodobens/: DataAnalysis.ipynb  ScrapingConsorcio.ipynb
notebooks/br_com/rodobens/data/: contemplados-2450765.parquet  contemplados-2450766.parquet  contemplados-2450770.parquet  demonstrativo-2450765-1.json  demonstrativo-2450765-10.json  demonstrativo-2450765-11.json  demonstrativo-2450765-12.json  demonstrativo-2450765-13.json  demonstrativo-2450765-14.json  demonstrativo-2450765-15.json  demonstrativo-2450765-16.json  demonstrativo-2450765-17.json  demonstrativo-2450765-18.json  demonstrativo-2450765-19.json  demonstrativo-2450765-2.json  demonstrativo-2450765-20.json  demonstrativo-2450765-21.json  demonstrativo-2450765-22.json  (+188 more)
notebooks/br_gov/cvm/: fi-cad.ipynb  fi-doc-inf_diario.ipynb
pyportela/: utils.py
pyportela/interfaces/: IWarehouse.py
pyportela/models/: CountryCode.py  Dashboard.py  DataResource.py  Dataset.py  DatasetSchema.py  License.py  Organization.py  OrganizationType.py  TableColumn.py  TableSchema.py  TableSchemaColumn.py  __init__.py
pyportela/repositories/: BigQueryWarehouse.py  OrganizationRepository.py  SettingsRepository.py  SqliteWarehouse.py
pyportela/services/: CachedDownload.py  DataCatalog.py  OrganizationService.py  SupabaseApi.py  SupabaseClient.py
pyportela/warehouses/: PostgresWarehouse.py
tests/: Organization_test.py
